Create custom componenets and onchange validations

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -9,6 +9,8 @@
         "confirmPassword": "Confirm Password",
         "country": "Country",
         "submit": "Submit",
-        "selectCountry": "Select Country"
+        "selectCountry": "Select Country",
+        "phone": "Phone Number",
+        "datePicker": "Commencement Date"
     }
 }
